# Project_IronMAn

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Jarvis.command  README.md  index.html  package-lock.json  package.json  start-mac.sh  start.sh
.github/workflows/: ci.yml
Jarvis Command Center.app/Contents/: Info.plist
Jarvis Command Center.app/Contents/MacOS/: applet
Jarvis Command Center.app/Contents/Resources/: droplet.icns
Jarvis Command Center.app/Contents/_CodeSignature/: CodeResources
apps/api/: alembic.ini  requirements.txt
apps/api/alembic/: env.py
apps/api/app/: main.py  seed.py
apps/api/tests/: test_agents.py  test_command_router.py  test_integrations.py  test_tasks.py
apps/desktop/: package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  main.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/web/: .env.local  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/components/: JarvisOverlay.tsx
apps/web/lib/: api.ts
docs/: AGENT_DESIGN.md  ARCHITECTURE.md  DESKTOP_SETUP.md  SECURITY.md  SETUP.md
infra/: docker-compose.yml
scripts/: README.md  create-mac-app.sh  setup.sh
services/claude-agent/: agent.py  config.py  example_usage.py  requirements.txt  tools.py
skills/ironman-command-center-builder/: SKILL.md
src/: graphifyAdapter.js  main.js  style.css
(+100 files in other folders)
