[package]
name = "jarvis-command-center"
version = "0.1.0"
description = "Jarvis Command Center — Local-first AI productivity cockpit"
authors = ["sumit33k"]
license = "MIT"
repository = "https://github.com/sumit33k/project_ironman"
default-run = "jarvis-command-center"
edition = "2021"
rust-version = "1.70"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "jarvis-command-center"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
